--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About us</h1>
 <p>This is my test app for One Month Rails</p>
+<a><img src="http://i.imgur.com/tlZayXa.jpg" title="source: imgur.com" height="600"/></a>
